--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,11 @@
 services:
+  # Backend API (Express)
   - type: web
     name: placement-prep-backend
     env: node
-    rootDir: backend
     plan: free
-    buildCommand: npm install
-    startCommand: npm start
+    buildCommand: cd backend && npm install
+    startCommand: node backend/src/server.js
     autoDeploy: true
     healthCheckPath: /api/health
     envVars:
@@ -15,11 +15,12 @@ services:
         generateValue: false
       - key: JWT_SECRET
         generateValue: true
+
+  # Frontend (Vite static site)
   - type: static
     name: placement-prep-frontend
-    rootDir: frontend
-    buildCommand: npm install && npm run build
-    staticPublishPath: dist
+    buildCommand: cd frontend && npm install && npm run build
+    staticPublishPath: frontend/dist
     envVars:
       - key: VITE_API_BASE
         value: https://placement-prep-backend.onrender.com/api
