--- a/render.yaml
+++ b/render.yaml
@@ -3,9 +3,10 @@ services:
   - type: web
     name: placement-prep-backend
     env: node
+    rootDir: backend
     plan: free
-    buildCommand: cd backend && npm install
-    startCommand: node backend/src/server.js
+    buildCommand: npm install
+    startCommand: npm start
     autoDeploy: true
     healthCheckPath: /api/health
     envVars:
@@ -19,8 +20,9 @@ services:
   # Frontend (Vite static site)
   - type: static
     name: placement-prep-frontend
-    buildCommand: cd frontend && npm install && npm run build
-    staticPublishPath: frontend/dist
+    rootDir: frontend
+    buildCommand: npm install && npm run build
+    staticPublishPath: dist
     envVars:
       - key: VITE_API_BASE
         value: https://placement-prep-backend.onrender.com/api
