--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.0",
+    "mongodb-memory-server": "^10.1.4",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
