--- a/render.yaml
+++ b/render.yaml
@@ -23,6 +23,10 @@ services:
     rootDir: frontend
     buildCommand: npm install && npm run build
     staticPublishPath: dist
+    routes:
+      - type: rewrite
+        source: "/*"
+        destination: "/index.html"
     envVars:
       - key: VITE_API_BASE
         value: https://placement-prep-backend.onrender.com/api
