--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,8 @@
 services:
-  # Backend API (Express)
+  # Single service serving API + built frontend
   - type: web
-    name: placement-prep-backend
+    name: placement-prep
     env: node
-    rootDir: backend
     plan: free
     buildCommand: npm install
     startCommand: npm start
@@ -16,19 +15,5 @@ services:
         generateValue: false
       - key: JWT_SECRET
         generateValue: true
-
-  # Frontend (Vite static site)
-  - type: static
-    name: placement-prep-frontend
-    rootDir: frontend
-    buildCommand: npm install && npm run build
-    staticPublishPath: dist
-    routes:
-      - type: rewrite
-        source: "/*"
-        destination: "/index.html"
-    envVars:
-      - key: VITE_API_BASE
-        value: https://placement-prep-backend.onrender.com/api
 
 
