--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.0",
     "mongodb-memory-server": "^10.1.4",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "@tensorflow/tfjs-node": "^4.15.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
