--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     name: placement-prep
     env: node
     plan: free
-    buildCommand: npm install
+    buildCommand: npm run postinstall
     startCommand: npm start
     autoDeploy: true
     healthCheckPath: /api/health
