--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,11 @@
   "name": "placement-prep-backend",
   "version": "1.0.0",
   "description": "Backend API for Placement Preparation Website (Express + MongoDB)",
-  "main": "src/server.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/server.js",
-    "start": "node src/server.js",
+    "dev": "nodemon server.js",
+    "start": "node server.js",
     "seed": "node src/seed/seed.js",
     "lint": "echo 'no linter configured'",
     "build": "echo 'No build step required for backend'"
